# tagged-transformer

./: .gitignore  .travis.yml  CHANGELOG.markdown  LICENSE  README.markdown  tagged-transformer.cabal
.github/workflows/: haskell-ci.yml
Control/Monad/Trans/: Tagged.hs
Data/Functor/Trans/: Tagged.hs
src/Data/Functor/Trans/: Tagged.hs
