name:           tagged-transformer
version:        0.8.2
license:        BSD3
license-file:   LICENSE
author:         Edward A. Kmett
maintainer:     Edward A. Kmett <ekmett@gmail.com>
stability:      experimental
category:       Data, Phantom Types
synopsis:       Monad transformer carrying an extra phantom type tag
homepage:       http://github.com/ekmett/tagged-transformer
copyright:      2011-2013 Edward A. Kmett
description:    Provides newtype wrappers for phantom types to avoid unsafely passing dummy arguments
build-type:     Simple
cabal-version:  >=1.10
extra-source-files:
  .vim.custom
  .ghci
  .gitignore
  CHANGELOG.markdown
  README.markdown
tested-with:   GHC == 8.0.2
             , GHC == 8.2.2
             , GHC == 8.4.4
             , GHC == 8.6.5
             , GHC == 8.8.4
             , GHC == 8.10.7
             , GHC == 9.0.2
             , GHC == 9.2.8
             , GHC == 9.4.8
             , GHC == 9.6.6
             , GHC == 9.8.4
             , GHC == 9.10.1

source-repository head
  type: git
  location: git://github.com/ekmett/tagged-transformer.git

library
  build-depends:
    base                      >= 4.9      && < 5,
    comonad                   >= 4        && < 6,
    contravariant             >= 0.3      && < 2,
    distributive              >= 0.3      && < 1,
    exceptions                >= 0.10     && < 1,
    mtl                       >= 2.2      && < 2.4,
    reflection                >= 1.1.6    && < 3,
    semigroupoids             >= 4        && < 7,
    tagged                    >= 0.4.4    && < 1

  exposed-modules:
    Data.Functor.Trans.Tagged

  hs-source-dirs: src
  ghc-options: -Wall
  default-language: Haskell2010
